--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,14 +1,35 @@
-image: node:lts
-pages:
-    cache:
-        paths:
-            - node_modules/
+image: docker:alpine
 
+services:
+  - docker:dind
+
+stages:
+  - build
+  - deploy
+
+cache:
+    paths:
+      - node_modules/
+
+build-vuepress:
+    stage: build
+    image: node:lts
     script:
-        - yarn install
-        - yarn docs:build
+      - yarn install
+      - yarn docs:build
     artifacts:
         paths:
-            - dist
-    only:
-        - master
+          - dist
+        expire_in: 1 day
+
+deploy-staging:
+    stage: deploy
+    before_script:
+      - apk add openssh-client
+      - eval $(ssh-agent -s)
+      - echo "$SSH_PRIVATE_KEY_STAGING" | tr -d '\r' | ssh-add -
+      - mkdir -p ~/.ssh
+      - echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config
+      - chmod 700 ~/.ssh
+    script:
+      - scp -r dist/ $SSH_HOST_STAGING:$SSH_PATH_STAGING
