--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,7 @@ cache:
     paths:
       - node_modules/
 
-build-vuepress:
+build:vuepress:
     stage: build
     image: node:lts
     script:
@@ -22,7 +22,7 @@ build-vuepress:
           - dist
         expire_in: 1 day
 
-deploy-staging:
+deploy:staging:
     stage: deploy
     before_script:
       - apk add openssh-client
@@ -33,3 +33,19 @@ deploy-staging:
       - chmod 700 ~/.ssh
     script:
       - scp -r dist/* $SSH_HOST_STAGING:$SSH_PATH_STAGING
+    only:
+      - develop
+
+deploy:prod:
+  stage: deploy
+  before_script:
+    - apk add openssh-client
+    - eval $(ssh-agent -s)
+    - echo "$SSH_PRIVATE_KEY_PROD" | tr -d '\r' | ssh-add -
+    - mkdir -p ~/.ssh
+    - echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config
+    - chmod 700 ~/.ssh
+  script:
+    - scp -r dist/* $SSH_HOST_PROD:$SSH_PATH_PROD
+  only:
+    - master
