--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@musique-pro/fl-lexique",
   "version": "1.0.0",
   "repository": "ssh://git@gitlab.edwc.tech:10022/musique-pro/fl-lexique.git",
-  "author": "Etienne Dewailly ∙ ED WEB Créations <etienne@edwebcreations.fr>",
+  "author": "GUIDEZ Antoine ∙ Musique Pro <contact@musique-pro.fr>",
   "scripts": {
     "docs:dev": "vuepress dev docs",
     "docs:build": "vuepress build docs"
