--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -46,6 +46,6 @@ deploy:prod:
 #    - echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config
 #    - chmod 700 ~/.ssh
   script:
-    - lftp -e "open $SSH_HOST_PROD; user $SSH_USERNAME_PROD $SSH_PASSWORD_PROD; mirror -X .* -X .*/ --reverse --verbose --delete dist/* lexique/; bye"
+    - lftp -e "open $SSH_HOST_PROD; user $SSH_USERNAME_PROD $SSH_PASSWORD_PROD; mirror -X .* -X .*/ --reverse --verbose --delete dist/ lexique/; bye"
   only:
     - master
